fix(MetricsList): Vertically align MetricsListItems
Fixes INSTUI-836

Test plan:
- Look at the new, second example on the MetricsList page
- Confirm that that the bug in the JIRA/Codepen is fixed --
  all MetricsListItems should now align at the top

Reviewed-on: https://gerrit.instructure.com/135820
Product-Review: Jennifer Stern <jstern@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Tested-by: Jenkins

--- a/packages/ui-core/src/components/MetricsList/styles.css
+++ b/packages/ui-core/src/components/MetricsList/styles.css
@@ -1,13 +1,9 @@
 .root {
   box-sizing: border-box;
-
   display: flex;
-  flex: 0 1 auto;
-  flex-direction: row;
   flex-wrap: wrap;
-
-  line-height: var(--lineHeight);
+  align-items: flex-start;
   justify-content: space-around;
-
+  line-height: var(--lineHeight);
   color: var(--color);
 }
